# o5mreader

./: .gitmodules  CMakeLists.txt
src/: MGArchive.h  o5mindexer.cpp  o5mreader.c  o5mreader.h
